# renqing-ledger

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  TASKS.md  deploy-mongodb.sh  docker-compose.yml  install-mongodb.sh  nginx.conf  pyproject.toml  tailwind.config.ts
.github/workflows/: deploy.yml  setup-tls.yml
backend/: .env  Dockerfile  main.py  pyproject.toml  start.sh
backend/app/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  auth.py  schemas.py
backend/app/routers/: __init__.py  auth.py  banquets.py  presets.py  records.py
backend/app/services/: __init__.py  auth_service.py  banquet_service.py  preset_service.py  record_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AddToHomeScreen.tsx  BanquetCard.tsx  CreateBanquetDialog.tsx  GiftRecordForm.tsx  GiftRecordList.tsx  Statistics.tsx
frontend/src/hooks/: useBanquets.ts  usePresets.ts
frontend/src/lib/: api.ts  auth-store.ts  data-store.ts  db.ts  export.ts  local-data.ts  remote-data.ts  remote-store.ts
frontend/src/pages/: Auth.tsx  BanquetDetail.tsx  Index.tsx  (+1 more)
k8s/: backend-deployment.yaml  deployment.yaml  frontend-deployment.yaml  ingress.yaml  mongodb-deployment.yaml  service.yaml
src/: index.css
src/components/: BanquetCard.tsx  CreateBanquetDialog.tsx  GiftRecordForm.tsx  GiftRecordList.tsx  Statistics.tsx
src/hooks/: useBanquets.ts  usePresets.ts
src/lib/: export.ts
src/pages/: BanquetDetail.tsx  Index.tsx
src/types/: index.ts
(+1 files in other folders)
